--- a/src/index.html
+++ b/src/index.html
@@ -36,25 +36,25 @@
             <div class="row mt-5 content">
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Pr. Antônio Cirilo
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Ap. Kleber de Jesus
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Ap. Valdir Reis
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Pr. Manoel
                     </h3>
                 </div>
@@ -62,25 +62,25 @@
             <div class="row mt-5 content">
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Pr. Antônio Cirilo
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Ap. Kleber de Jesus
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Ap. Valdir Reis
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
-                    <h3 class="section-title fs-4">
+                    <h3 class="section-title">
                         Pr. Manoel
                     </h3>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="col-md-5">
                         <img src="./images/evento.png" class="d-none w-100 rounded" alt="foto do espaço interno">
                     </div>
-                    <div class="col-md-7 mt-3 mt-md-0 description">
+                    <div class="col-md-12 mt-3 mt-md-0 description">
                         <h2 class="section-title">O evento</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Aperiam tenetur voluptatum voluptates sequi dolorem assumenda ratione,
