--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="header__navbar">
-            <h2>Dia 01 a 04 de Novembro</h2>
+            <h2>Dias 01 a 04 de Novembro</h2>
         </nav>
         <div class="content">
             <h2 class="content__title">Igreja Lar Mcz</h2>
