colocando botao e compra

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,11 @@
                 Commodi ducimus asperiores esse corrupti assumenda, blanditiis error dolores mollitia?
                 Impedit delectus aperiam in officiis labore assumenda exercitationem quis ex eum illo.</p>
         </div>
-        <button class="button">
-            Participar
-        </button>
+        <a href="https://buy.stripe.com/bIY6qPd9Y57naGc5kl" target="_blank">
+            <button class="button">
+                Participar
+            </button>
+        </a>
     </section>
     <section class="ministros">
         <div class="container">
@@ -110,9 +112,11 @@
                             Aperiam tenetur voluptatum voluptates sequi dolorem assumenda ratione.
                             
                         </p>
-                        <button class="button">
-                            Adquirir meu ingresso
-                        </button>
+                        <a href="https://buy.stripe.com/bIY6qPd9Y57naGc5kl" target="_blank">
+                            <button class="button">
+                                Adquirir meu ingresso
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -146,9 +150,11 @@
                     </p>
                 </div>
             </div>
-            <button class="button">
-                Adquirir o meu
-            </button>
+            <a href="https://buy.stripe.com/bIY6qPd9Y57naGc5kl" target="_blank">
+                <button class="button">
+                    Adquirir o meu
+                </button>
+            </a>
         </div>
     </section>
     <footer class="footer">
