--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,22 @@
             <h2>Dias 01 a 04 de Novembro</h2>
         </nav>
         <div class="content">
-            <h2 class="content__title">Igreja Lar Mcz</h2>
+            <h2 class="content__title">Igreja 'Nome'</h2>
         </div>
     </header>
     <section class="hero">
         <div class="content">
             <h1>Você quer ser cheio da glória de Deus?</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Commodi ducimus asperiores esse corrupti assumenda, blanditiis error dolores mollitia?
-                Impedit delectus aperiam in officiis labore assumenda exercitationem quis ex eum illo.</p>
+            <p>
+                O evento "Peso da Glória" é uma oportunidade única para experimentar
+                a presença manifesta de Deus em um ambiente de adoração e ensino.
+                Com um time de ministros renomados,
+                o evento busca levar os participantes a um encontro profundo com a glória divina,
+                proporcionando momentos de louvor,
+                ministração da Palavra e manifestações do Espírito Santo
+            </p>
         </div>
-        <a href="https://buy.stripe.com/bIY6qPd9Y57naGc5kl" target="_blank">
+        <a href="#" target="_blank">
             <button class="button">
                 Participar
             </button>
@@ -39,25 +44,29 @@
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Pr. Antônio Cirilo
+                        <!-- Pr. Antônio Cirilo -->
+                        nome do preletor
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Ap. Kleber de Jesus
+                        <!-- Ap. Kleber de Jesus -->
+                        nome do preletor
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Ap. Valdir Reis
+                        <!-- Ap. Valdir Reis -->
+                        nome do preletor
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Pr. Manoel
+                        <!-- Pr. Manoel -->
+                        nome do preletor
                     </h3>
                 </div>
             </div>
@@ -65,25 +74,29 @@
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Pr. Antônio Cirilo
+                        <!-- Pr. Antônio Cirilo -->
+                        nome do preletor
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Ap. Kleber de Jesus
+                        <!-- Ap. Kleber de Jesus -->
+                        nome do preletor
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Ap. Valdir Reis
+                        <!-- Ap. Valdir Reis -->
+                        nome do preletor
                     </h3>
                 </div>
                 <div class="col-md-3">
                     <img src="./images/ministros.png" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="section-title">
-                        Pr. Manoel
+                        <!-- Pr. Manoel -->
+                        nome do preletor
                     </h3>
                 </div>
             </div>
@@ -98,21 +111,24 @@
                     </div>
                     <div class="col-md-12 mt-3 mt-md-0 description">
                         <h2 class="section-title">O evento</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aperiam tenetur voluptatum voluptates sequi dolorem assumenda ratione,
-                            modi cum mollitia dolorum deleniti pariatur corporis consequatur adipisci aut eaque?
-                            Ab, quis mollitia.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aperiam tenetur voluptatum voluptates sequi dolorem assumenda ratione,
-                            modi cum mollitia dolorum deleniti pariatur corporis consequatur adipisci aut eaque?
-                            Ab, quis mollitia.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aperiam tenetur voluptatum voluptates sequi dolorem assumenda ratione.
+                        <p>
+                            Durante os dias do evento, os participantes serão encorajados a buscar uma experiência
+                            transformadora com Deus, sendo capacitados e
+                            fortalecidos espiritualmente para viverem uma vida de propósito e impacto.
+                            O evento "Peso da Glória" é um convite para mergulhar em um ambiente de adoração intensa e
+                            profundidade espiritual. Será um tempo de busca pela presença de Deus e
+                            de se render completamente ao Seu poder transformador.
                             
                         </p>
-                        <a href="https://buy.stripe.com/bIY6qPd9Y57naGc5kl" target="_blank">
+                        <p>
+                            Através de ministrações inspiradoras e momentos de louvor,
+                            os participantes serão desafiados a experimentar a
+                            glória divina de forma impactante e pessoal.
+                            Prepare-se para ser envolvido pela atmosfera da glória de Deus e
+                            ter um encontro poderoso que marcará sua vida para sempre.
+                            Não perca essa oportunidade de experimentar o "Peso da Glória" em sua vida!
+                        </p>
+                        <a href="#" target="_blank">
                             <button class="button">
                                 Adquirir meu ingresso
                             </button>
@@ -146,11 +162,11 @@
                 </div>
                 <div class="txt">
                     <p>
-                        Ingresso presencial para Conferência Peso da Glória
+                        Ingresso presencial para 'Nome do evento'
                     </p>
                 </div>
             </div>
-            <a href="https://buy.stripe.com/bIY6qPd9Y57naGc5kl" target="_blank">
+            <a href="#" target="_blank">
                 <button class="button">
                     Adquirir o meu
                 </button>
@@ -164,10 +180,10 @@
                 ® 2023 - Todos os direitos reservados.
             </p>
             <p class="text--small">
-                Peso da glória | 01, 02, 03 e 04 de Novembro
+                'Nome do evento' | 01, 02, 03 e 04 de Novembro
             </p>
             <p>
-                Igreja Lar Maceió. 
+                Igreja 'Nome'. 
             </p>
         </div>
     </footer>
